# volki

./: .gitignore  Cargo.toml  build.rs  volki.toml
.claude/: CLAUDE.md  settings.local.json  web-prod-readiness.md
docs/: docs.json
scripts/: build.sh  install.sh  setup-test-projects.sh
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/cli/: command.rs  confirm.rs  error.rs  help.rs  mod.rs  output.rs  parser.rs  progress.rs  registry.rs  spinner.rs  style.rs  terminal.rs  validate.rs
src/core/cli/commands/: deadcode.rs  duplicate.rs  fix.rs  format.rs  init.rs  license.rs  (+4 more)
src/core/config/: mod.rs  parser.rs
src/core/package/: mod.rs
src/core/plugins/: mod.rs  protocol.rs  registry.rs  resolver.rs  runner.rs  types.rs
src/core/security/: mod.rs
src/core/utils/: log.rs
src/core/volkiwithstds/: mod.rs
src/extnl/jetbrains/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/extnl/npm/: README.md  index.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts
src/extnl/pip/: README.md  pyproject.toml
src/extnl/pip/examples/volki_plugin_example/: README.md  pyproject.toml
src/extnl/pip/examples/volki_plugin_example/volki_plugin_example/: volki_plugin.py
src/extnl/pip/volki/: __init__.py
src/extnl/vscode/: README.md  language-configuration.json  package.json
src/libs/: mod.rs
src/libs/db/: mod.rs
src/libs/lang/: mod.rs
src/libs/web/: mod.rs  prelude.rs  security.rs  server.rs
tests/: cli_integration.rs  formatter_integration.rs  no_raw_console_writes.rs  plugin_integration.rs  scanner_integration.rs
(+256 files in other folders)
